--- a/packages/app/public/html/actividades.html
+++ b/packages/app/public/html/actividades.html
@@ -24,7 +24,7 @@
     <body>
         <main>
 
-            <section id="info" style="padding-top: 60px;">
+            <section id="info" style="padding-top: 60px; font-size: 1.5rem;">
                 <h3>Actividades</h3>
                 <hr>
                 <br>
