--- a/packages/app/public/html/login.html
+++ b/packages/app/public/html/login.html
@@ -19,7 +19,7 @@
         <nav class="menu">
             <a href="index.html">Inicio</a>
             <a href="actividades.html" >Actividades</a>
-            <a href="blog.html">¿Quienes somos?</a>
+            <a href="blog.html">Galeria</a>
             <a href="contacto.html">Contacto</a>
             <a href="login.html" class="otra">Login</a>
             <a href="registroCrador.html" class="otra">Registro Participante</a>
@@ -45,8 +45,8 @@
                 <input type="password" name="contraseña" id="contraseña" placeholder="Password" required>
 
                 <input onClick="login()" type="submit" id="button-login" value="Sing In">
-                <a href="#">Lost your password?</a><br>
-                <a href="#">Don't have an acount?</a>
+                <a href="index.html">Lost your password?</a><br>
+                <a href="index.html">Don't have an acount?</a>
         </div>
     </div>
 </body>
