--- a/packages/app/public/html/index.html
+++ b/packages/app/public/html/index.html
@@ -19,7 +19,7 @@
                 <a href="blog.html">Galeria</a>
                 <a href="contacto.html">Contacto</a>
                 <a href="login.html" class="otra">Login</a>
-                <a href="registroCrador.html" class="otra">Registro Participante</a>
+                <a href="./registroCrador.html" class="otra">Registro Participante</a>
                 <a href="registroCrador.html" class="otra">Registro Psicologo</a>
             </nav>
         </div>
@@ -31,7 +31,7 @@
             <h2>BIENVENIDOS A HEALTH SPACE</h2>
             <h2>¿Quienes somos?</h2>
             <p>Somos una comunidad dispuesta ayudar a personas con  problemas de salud mental a través de un método simple y divertido que incentive la interacción física entre la comunidad, ofreciendo actividades sociales pensadas por un equipo de psicólogos de acuerdo a los gustos y comportamientos de las personas para lograr una cambio positivo en el estado de ánimo de cada participante. </p>
-            <a href="actividades.html" class="leermas">Comenzar</a>
+            <a href="./registroCrador.html" class="leermas">Comenzar</a>
           </div>
         </section>
     </main>
