--- a/packages/app/public/html/tableroDeEventosParticipante.html
+++ b/packages/app/public/html/tableroDeEventosParticipante.html
@@ -144,28 +144,14 @@
                         </div>
                 </div>
             </div>
-            <div class="cardbox">
-                    <!--
-                    <div class="card sombra">
-                        <div>
-                            <div class="actividadParticipante">
-                                <h3>Escuela de Familias</h1>
-                                <img>
-                                <h4>Cl. 63 #45-10 </h4>
-                                <h5>16/05/2021</h5>
-                                <br>
-                                <p>
-                                    Este programa consiste en el desarrollo de sistemas de apoyo social a familias o allegados de personas con enfermedad mental a través de programas de psicoeducación (escuelas de familias) y la potenciación y desarrollo de redes de ayuda mutua.
-                                </p>
-                                <a id= "Unirse" class="btn">Unire</a>
-                            </div>
-                    </div>-->
+            <div class="cardbox cards">
             </div>
 
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/prueba.js"></script>
+    <script src="../js/activity.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 </body>
 </html>
