--- a/packages/app/public/html/dashParticipante.html
+++ b/packages/app/public/html/dashParticipante.html
@@ -36,9 +36,6 @@
                     </a>
                 </li>
                 <li>
-<<<<<<< HEAD:packages/app/public/html2/dashUsuario.html
-                    <a href="tableroEventos.html">
-=======
                     <a href="dashPerfilParticipante.html">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -49,72 +46,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashParticipante.html">
->>>>>>> 7032393a11c327abee1d6760f484882b2429282d:packages/app/public/html2/dashParticipante.html
-                        <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-messenger" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M3 20l1.3 -3.9a9 8 0 1 1 3.4 2.9l-4.7 1" />
-                            <path d="M8 13l3 -2l2 2l3 -2" />
-                        </svg></span>
-<<<<<<< HEAD:packages/app/public/html2/dashUsuario.html
-                        <span class="title">Eventos</span>
-=======
-                        <span class="title">Dashboard</span>
->>>>>>> 7032393a11c327abee1d6760f484882b2429282d:packages/app/public/html2/dashParticipante.html
-                    </a>
-                </li>
-                <!--<li>
-                    <a href="">
-                        <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-help" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="12" cy="12" r="9" />
-                            <line x1="12" y1="17" x2="12" y2="17.01" />
-                            <path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
-                        </svg></span>
-                        <span class="title">Help</span>
-                    </a>
-                </li>-->
-                <li>
-<<<<<<< HEAD:packages/app/public/html2/dashUsuario.html
-                    <a href="dashUsuario.html">
-                        <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="12" cy="7" r="4" />
-                            <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
-                        </svg></span>
-                        <span class="title">Profile</span>
-                    </a>
-                </li>
-                <!-- <li>
-=======
->>>>>>> 7032393a11c327abee1d6760f484882b2429282d:packages/app/public/html2/dashParticipante.html
-                    <a href="">
-                        <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" />
-                            <circle cx="12" cy="12" r="3" />
-                        </svg></span>
-                        <span class="title">Settings</span>
-                    </a>
-<<<<<<< HEAD:packages/app/public/html2/dashUsuario.html
-                </li>-->
-                <!-- <li>
-                    <a href="dashCrearEvento.html">
-                        <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <line x1="12" y1="5" x2="12" y2="19" />
-                            <line x1="5" y1="12" x2="19" y2="12" />
-                        </svg></span>
-                        <span class="title">Create event</span>
-                    </a>
-                </li>-->
-                <li>
-                    <a href="../html/index.html">
-=======
-                </li>
-                <li>
                     <a href="index.html">
->>>>>>> 7032393a11c327abee1d6760f484882b2429282d:packages/app/public/html2/dashParticipante.html
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-bar-left" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="4" y1="12" x2="14" y2="12" />
@@ -128,7 +60,7 @@
             </ul>
         </div>
         <div class="main">
-            <dir class="topbar">
+            <div class="topbar">
                 <div class="toggle" onclick="toggleMenu()">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -137,18 +69,13 @@
                         <line x1="4" y1="18" x2="20" y2="18" />
                     </svg>
                 </div>
-                <div class="search">
-                <!-- <label>
-                        <input type="text" placeholder="search here">
-                    </label>-->
-                </div>
                 <div class="user">
                     <div class="imagen">
                         <img src="../img/perfil.jpg" alt="">
                     </div>
                 </div>
-            </dir>
-            <div class="cardbox">
+            </div>
+            <div class="cardbox cards">
                 <div class="card sombra">
                     <div>
                         <div class="numbers">6</div>
@@ -180,78 +107,13 @@
                         </svg>
                         </div>
                 </div>
-<<<<<<< HEAD:packages/app/public/html2/dashUsuario.html
-                <!--<div class="card sombra">
-                    <div>
-                        <div class="numbers">1</div>
-                        <div class="cardName">I created event</div>
-                    </div>
-                    <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-square-plus" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <rect x="4" y="4" width="16" height="16" rx="2" />
-                            <line x1="9" y1="12" x2="15" y2="12" />
-                            <line x1="12" y1="9" x2="12" y2="15" />
-                        </svg>
-                    </div>
-                </div>-->
-=======
->>>>>>> 7032393a11c327abee1d6760f484882b2429282d:packages/app/public/html2/dashParticipante.html
             </div>
             <div class="details">
-                <div class="recentOrders sombra">
-                    <div class="cardHeader">
-                        <h2>Challenges</h2>
-                        <!--<a href="#" class="btn">View all</a>-->
-                    </div>
-                    <table>
-                        <thead>
-                            <tr>
-                                <td>Name</td>
-                                <td>Place</td>
-                                <td>Hour</td>
-                                <td>Description</td>
-                                <td>Delete</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Paseo en bici</td>
-                                <td>los heroes</td>
-                                <td>11:00 pm</td>
-                                <td><a href="#" class="btn status">go</a></td>
-                                <td><a href="#" class="btn-r status">why?</a></td>
-                            </tr>
-                            <tr>
-                                <td>Paseo en bici</td>
-                                <td>los heroes</td>
-                                <td>11:00 pm</td>
-                                <td><a href="#" class="btn status">go</a></td>
-                                <td><a href="#" class="btn-r status">why?</a></td>
-                            </tr>
-                            <tr>
-                                <td>Paseo en bici</td>
-                                <td>los heroes</td>
-                                <td>11:00 pm</td>
-                                <td><a href="#" class="btn status">go</a></td>
-                                <td><a href="#" class="btn-r status">why?</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+
                 <div class="recentCustomers sombra">
                     <div class="cardHeader">
                         <h2>Progress</h2>
                     </div>
-                    <!--<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mood-crazy-happy" width="180" height="180" viewBox="0 0 24 24" stroke-width="2" stroke="#00b341" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <circle cx="12" cy="12" r="9" />
-                        <line x1="7" y1="8.5" x2="10" y2="11.5" />
-                        <path d="M7 11.5l3 -3" />
-                        <line x1="14" y1="8.5" x2="17" y2="11.5" />
-                        <path d="M14 11.5l3 -3" />
-                        <path d="M9.5 15a3.5 3.5 0 0 0 5 0" />
-                    </svg>-->
                     <div class="card">
                         <div class= "contenedor1" id="perfil">
                             <div class="col-12 my-13 pt-3 shadow">
