registro psicologos arreglado

--- a/packages/app/public/html/registroPsicologos.html
+++ b/packages/app/public/html/registroPsicologos.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="../css/registroPsicologos.css"> 
   <script src="../js/js.js"></script>
+  <script src="../js/regristroPsicologo.js"></script>
   <title>Registro perfil Psicologos</title>
 </head>
 <header>
@@ -40,12 +41,6 @@
     <input class="botons" type="button" onclick="getData()" value="Registrar">
     <p><a href="index.html">volver</a></p>
   </section>
-<!--   <script>
-      function renderImage(formData){
-          const file = FormData.get('licencia')
-          const image = URL.createObjectURL(file)
-      }
-  </script> -->
-  <script src="../js/regristroPsicologos.js"></script> 
+  <!-- <script src="../js/regristroPsicologo.js"></script>  -->
 </body>
 </html>
