Se agregan todas las rutas del frontend

--- a/packages/app/public/html/actividades.html
+++ b/packages/app/public/html/actividades.html
@@ -12,12 +12,12 @@
             <h1 class="">HEALTH SPACE</h1>
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
-                <a href="index.html">Inicio</a>
-                <a href="actividades.html">Actividades</a>
-                <a href="blog.html">Galeria</a>
-                <a href="contacto.html">Contacto</a>
-                <a href="registroCrador.html" class="otra">Registro Participante</a>
-                <a href="registroCrador.html" class="otra">Registro Psicologo</a>
+                <a href="/">Inicio</a>
+                <a href="/gallery">Galeria</a>
+                <a href="/contact">Contacto</a>
+                <a href="/login" class="otra">Login</a>
+                <a href="/register" class="otra">Registro Participante</a>
+                <a href="/register/psychology" class="otra">Registro Psicologo</a>
             </nav>
         </div>
     </header>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             
-                <a href="registroCrador.html" class="rojo">¿Te interesa? REGISTRATE</a>
+                <a href="/register" class="rojo">¿Te interesa? REGISTRATE</a>
             </section>
         </main>
         <footer>
