--- a/packages/app/public/html/contacto.html
+++ b/packages/app/public/html/contacto.html
@@ -12,13 +12,12 @@
             <h1 class="">HEALTH SPACE</h1>
             <label id="icon-menu" class="icon-menu"></label>
             <nav class="menu">
-                <a href="index.html">Inicio</a>
-                <a href="actividades.html">Actividades</a>
-                <a href="blog.html">Galeria</a>
-                <a href="contacto.html">Contacto</a>
-                <a href="login.html" class="otra">Login</a>
-                <a href="registroCrador.html" class="otra">Registro Participante</a>
-                <a href="registroCrador.html" class="otra">Registro Psicologo</a>
+                <a href="/">Inicio</a>
+                <a href="/activities" >Actividades</a>
+                <a href="/gallery">Galeria</a>
+                <a href="/login" class="otra">Login</a>
+                <a href="/register" class="otra">Registro Participante</a>
+                <a href="/register/psychology" class="otra">Registro Psicologo</a>
             </nav>
         </div>
     </header>
@@ -29,7 +28,7 @@
                 <hr>
                 <br>
                 <br>
-                <a href="index.html" class="rojo">Regresar al inicio</a>
+                <a href="/" class="rojo">Regresar al inicio</a>
             </section>
         </main>
         <footer>
