--- a/packages/app/public/html/dashCrearEvento.html
+++ b/packages/app/public/html/dashCrearEvento.html
@@ -15,7 +15,7 @@
         <div class="navigation">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="/">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="10" y1="14" x2="21" y2="3" />
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashUsuario.html">
+                    <a href="/dashboard/psychology">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="12" cy="7" r="4" />
@@ -77,7 +77,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashCrearEvento.html">
+                    <a href="/event/create">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="12" y1="5" x2="12" y2="19" />
