--- a/packages/app/public/html/modificarEvento.html
+++ b/packages/app/public/html/modificarEvento.html
@@ -15,10 +15,10 @@
       <h1 class="">HEALTH SPACE</h1>
       <label id="icon-menu" class="icon-menu"></label>
       <nav class="menu">
-        <a href="perfilUsuario.html">Mi Perfil</a>
-        <a href="tableroDeEventos.html" >Actividades</a>
-        <a href="crearEventos.html">Crear Evento</a>
-        <a href="index.html">salir</a>
+        <a href="/profile/psychology">Mi Perfil</a>
+        <a href="/events" >Actividades</a>
+        <a href="/event/create">Crear Evento</a>
+        <a href="/">salir</a>
       </nav>
   </div>
 </header>
@@ -33,7 +33,7 @@
     <b>Ingrese una descripción del Evento:</b>
     <textarea name="textarea" id="descripcion" rows="3" cols="60"></textarea>
     <input class="botons" type="button" onclick="getData()" value="Modificar">
-    <p><a href="http://localhost:5000/html/tableroDeEventos.html">volver</a></p>
+    <p><a href="/events">volver</a></p>
   </section>
   <script src="../js/modificarEvento.js"></script>
 </body>
