--- a/packages/app/public/html/EventosParticipante.html
+++ b/packages/app/public/html/EventosParticipante.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil|Participante</title>
+    <title>TableroEventos|Participante</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" 
     integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/normallize.css">
@@ -15,7 +15,7 @@
         <div class="navigation">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="/">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="10" y1="14" x2="21" y2="3" />
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tableroDeEventosParticipante.html">
+                    <a href="/events">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <polyline points="5 12 3 12 12 3 21 12 19 12" />
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashPerfilParticipante.html">
+                    <a href="/profile">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="12" cy="7" r="4" />
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashParticipante.html">
+                    <a href="/dashboard">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-messenger" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M3 20l1.3 -3.9a9 8 0 1 1 3.4 2.9l-4.7 1" />
@@ -77,7 +77,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="/">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-bar-left" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="4" y1="12" x2="14" y2="12" />
@@ -91,7 +91,7 @@
             </ul>
         </div>
         <div class="main">
-            <dir class="topbar">
+            <div class="topbar">
                 <div class="toggle" onclick="toggleMenu()">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -102,7 +102,9 @@
                 </div>
                 <div class="search">
                     <label>
-                    <!-- <input type="text" placeholder="search here">-->
+                        <div class="search">
+                            <input id="busqueda" onkeyup="search(event)" type="search" name="busqueda" placeholder="Futbol, Psicologia, Cocinar ....">
+                        </div>
                     </label>
                 </div>
                 <div class="user">
@@ -110,7 +112,7 @@
                         <img src="../img/perfil.jpg" alt="">
                     </div>
                 </div>
-            </dir>
+            </div>
             <div class="cardbox">
                 <div class="card sombra">
                     <div>
@@ -144,51 +146,28 @@
                         </div>
                 </div>
             </div>
-            <div class="cardbox">
-                <div class="card sombra">
-                        <div class= "contenedor1" id="perfil">
-                        </div>
-                </div>
-                <!--
-                    ###############
-                    Aqui agregar
-                    ###############
-                -->
-
-
-                <!--<div class="details">
-                    <dir class="recentOrders sombra">
-                        <div class="cardHeader">
-                            <h2>See challenges</h2>
-                            <a href="#"> View All</a>
-                        </div>
-                        <table>
-                            <thead>
-                                <td>Challenge Name</td>
-                                <td>Lugar</td>
-                                <td>Place</td>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Jugar tejo</td>
-                                    <td>Bola 15</td>
-                                    <td><span class="status Activo">Activo</span></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </dir>
-                    <dir class="recentCustomers sombra">
-                        <div class="cardHeader">
-                            <h2>See challenges</h2>
-                            <a href="#" class="btn"> Mood</a>
-                        </div>
-                    </dir>
-                </div>
-                -->
+            <div class="cardbox cards">
             </div>
+
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/perfilPsicologo.js"></script>
+    <script src="../js/activity.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 </body>
 </html>
+
+
+            <!--
+                <div class="card sombra">
+                    <div class= "contenedor1" id="perfil">
+                        <div class="col-12 my-13 pt-3 shadow">
+                            <hr>
+                            <div class="contenedor2">
+                                <div class="section-header">
+                                    <h2>Lista de Actividades</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
