--- a/packages/app/public/html/EventosPsicologo.html
+++ b/packages/app/public/html/EventosPsicologo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil|Psicologo</title>
+    <title>TableroEventos|Psicologo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" 
     integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/normallize.css">
@@ -26,7 +26,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="tableroDeEventosPsicologo.html">
+                        <a href="EventosPsicologo.html">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <polyline points="5 12 3 12 12 3 21 12 19 12" />
@@ -37,7 +37,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="dashPerfilPsicologo.html">
+                        <a href="/profile/psychology">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <circle cx="12" cy="7" r="4" />
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="dashPsicologo.html">
+                        <a href="/dashboard/psychology">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-messenger" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M3 20l1.3 -3.9a9 8 0 1 1 3.4 2.9l-4.7 1" />
@@ -78,7 +78,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="dashCrearEvento.html">
+                        <a href="/event/create.html">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <line x1="12" y1="5" x2="12" y2="19" />
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                 <li>
-                    <a href="index.html">
+                    <a href="/">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-bar-left" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="4" y1="12" x2="14" y2="12" />
@@ -102,7 +102,7 @@
             </ul>
         </div>
         <div class="main">
-            <dir class="topbar">
+            <div class="topbar">
                 <div class="toggle" onclick="toggleMenu()">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -121,52 +121,62 @@
                         <img src="../img/perfil.jpg" alt="">
                     </div>
                 </div>
-            </dir>
-            <div class="cardbox">
-                <div class="card sombra">
-                        <div class= "contenedor1" id="perfil">
-                        </div>
-                </div>
-                <!--
-                    ###############
-                    Aqui agregar
-                    ###############
-                -->
-
-
-                <!--<div class="details">
-                    <dir class="recentOrders sombra">
-                        <div class="cardHeader">
-                            <h2>See challenges</h2>
-                            <a href="#"> View All</a>
-                        </div>
-                        <table>
-                            <thead>
-                                <td>Challenge Name</td>
-                                <td>Lugar</td>
-                                <td>Place</td>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Jugar tejo</td>
-                                    <td>Bola 15</td>
-                                    <td><span class="status Activo">Activo</span></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </dir>
-                    <dir class="recentCustomers sombra">
-                        <div class="cardHeader">
-                            <h2>See challenges</h2>
-                            <a href="#" class="btn"> Mood</a>
-                        </div>
-                    </dir>
-                </div>
-                -->
             </div>
+            <div class="cardbox">
+                <!-- <div class="card sombra">
+                </div> -->
+            -->
+                <div class="card sombra">
+                    <div>
+                        <div class="numbers">1</div>
+                        <div class="cardName">I created event</div>
+                    </div>
+                    <div class="iconBox">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-square-plus" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <rect x="4" y="4" width="16" height="16" rx="2" />
+                            <line x1="9" y1="12" x2="15" y2="12" />
+                            <line x1="12" y1="9" x2="12" y2="15" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="cardbox">
+                <!-- <div class="card sombra">
+                    <div class="actividadParticipante">
+                        <div>
+                            <h3>Escuela de Familias</h1>
+                            <img src="../img/bici.jpg" >
+                            <h4>Cl. 63 #45-10 </h4>
+                            <h5>16/05/2021</h5>
+                            <p>
+                                Este programa consiste en el desarrollo de sistemas de apoyo social a familias o allegados de personas con enfermedad mental a través de programas de psicoeducación (escuelas de familias) y la potenciación y desarrollo de redes de ayuda mutua.
+                            </p>
+                            <a id= "Modificar" class="btn">Modificar</a>
+                            <a id= "eliminar" class="btn-r">Eliminar</a>
+                        </div>
+                    </div> 
+                </div> -->
+            </div> -->
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/perfilPsicologo.js"></script>
+    <script src="../js/prueba2.js"></script> 
+    
+
 </body>
 </html>
+
+
+            <!--
+                <div class="card sombra">
+                    <div class= "contenedor1" id="perfil">
+                        <div class="col-12 my-13 pt-3 shadow">
+                            <hr>
+                            <div class="contenedor2">
+                                <div class="section-header">
+                                    <h2>Lista de Actividades</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
