--- a/packages/app/public/html/dashCrearEventoPsicologo.html
+++ b/packages/app/public/html/dashCrearEventoPsicologo.html
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashPerfilPsicologo.html">
+                    <a href="/profile/psychology">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="12" cy="7" r="4" />
@@ -77,7 +77,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashCrearEventoPsicologo.html">
+                    <a href="/event/create">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="12" y1="5" x2="12" y2="19" />
