--- a/packages/app/public/html/dashParticipante.html
+++ b/packages/app/public/html/dashParticipante.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tableroDeEventosParticipante.html">
+                    <a href="/events">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <polyline points="5 12 3 12 12 3 21 12 19 12" />
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="dashPerfilParticipante.html">
+                    <a href="/profile">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="12" cy="7" r="4" />
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="/">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-bar-left" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="4" y1="12" x2="14" y2="12" />
