--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -26,7 +26,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="tableroDeEventosPsicologo.html">
+                        <a href="EventosPsicologo.html">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <polyline points="5 12 3 12 12 3 21 12 19 12" />
@@ -37,7 +37,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="dashPerfilPsicologo.html">
+                        <a href="/profile/psychology">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <circle cx="12" cy="7" r="4" />
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="dashPsicologo.html">
+                        <a href="/profile/psychology">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-messenger" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M3 20l1.3 -3.9a9 8 0 1 1 3.4 2.9l-4.7 1" />
@@ -78,7 +78,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="dashCrearEvento.html">
+                        <a href="/event/create">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <line x1="12" y1="5" x2="12" y2="19" />
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                 <li>
-                    <a href="index.html">
+                    <a href="/">
                         <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-bar-left" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <line x1="4" y1="12" x2="14" y2="12" />
