--- a/packages/app/public/html/login.html
+++ b/packages/app/public/html/login.html
@@ -17,13 +17,13 @@
         <h1 class="">HEALTH SPACE</h1>
         <label id="icon-menu" class="icon-menu"></label>
         <nav class="menu">
-            <a href="index.html">Inicio</a>
-            <a href="actividades.html" >Actividades</a>
-            <a href="blog.html">Galeria</a>
-            <a href="contacto.html">Contacto</a>
-            <a href="login.html" class="otra">Login</a>
-            <a href="registroCrador.html" class="otra">Registro Participante</a>
-            <a href="registroCrador.html" class="otra">Registro Psicologo</a>
+            <a href="/">Inicio</a>
+            <a href="/activities" >Actividades</a>
+            <a href="/gallery">Galeria</a>
+            <a href="/contact">Contacto</a>
+            <a href="/login" class="otra">Login</a>
+            <a href="/register" class="otra">Registro Participante</a>
+            <a href="/register/psychology" class="otra">Registro Psicologo</a>
         </nav>
     </div>
 </header>
@@ -45,8 +45,8 @@
                 <input type="password" name="contraseña" id="contraseña" placeholder="Password" required>
 
                 <input onClick="login()" type="submit" id="button-login" value="Sing In">
-                <a href="index.html">Lost your password?</a><br>
-                <a href="index.html">Don't have an acount?</a>
+                <a href="/">Lost your password?</a><br>
+                <a href="/">Don't have an acount?</a>
         </div>
     </div>
 </body>
