--- a/packages/app/public/html/perfilUsuario.html
+++ b/packages/app/public/html/perfilUsuario.html
@@ -42,10 +42,10 @@
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for = "menu-bar" id="icon-menu"></label>
             <nav class="menu">
-                <a href="perfilUsuario.html">Mi Perfil</a>
-                <a href="tableroDeEventos.html" >Actividades</a>
-                <a href=" ">Ver Dashboard</a>
-                <a href="index.html">salir</a>
+                <a href="/profile">Mi Perfil</a>
+                <a href="/events" >Actividades</a>
+                <a href="/dashboard">Ver Dashboard</a>
+                <a href="/">salir</a>
             </nav>
         </div>
     </header>
