--- a/packages/app/public/html/registroCrador.html
+++ b/packages/app/public/html/registroCrador.html
@@ -18,13 +18,13 @@
         <h1 class="">HEALTH SPACE</h1>
         <label id="icon-menu" class="icon-menu"></label>
         <nav class="menu">
-            <a href="index.html">Inicio</a>
-            <a href="cursos.html" >Cursos</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-            <a href="login.html" class="otra">Login</a>
-            <a href="registroCrador.html" class="otra">Registro Participante</a>
-            <a href="registroCrador.html" class="otra">Registro Psicologo</a>
+            <a href="/">Inicio</a>
+            <a href="/activities" >Actividades</a>
+            <a href="/gallery">Galeria</a>
+            <a href="/contact">Contacto</a>
+            <a href="/login" class="otra">Login</a>
+            <a href="/register" class="otra">Registro Participante</a>
+            <a href="/register/psychology" class="otra">Registro Psicologo</a>
         </nav>
     </div>
 </header>
