alert de descripcion

--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -190,7 +190,7 @@
                                 <td>Paseo en bici</td>
                                 <td>los heroes</td>
                                 <td>11:00 pm</td>
-                                <td><a href="#" class="btn status">go</a></td>
+                                <td><a onclick="aleta()" href="#" class="btn status">go</a></td>
                                 <td><a href="#" class="btn-r status">why?</a></td>
                             </tr>
                             <tr>
@@ -217,23 +217,13 @@
                 </div>
             </div>
         </div>
+
     </div>
     <script src="../js/dashboard.js"></script>
     <script src="../js/perfilUser.js"></script>
+    <script src="../js/sweetalert2.all.min.js"></script>
+    <script src="../js/alertDescrip.js"></script>
 
 </body>
 </html>
 
-
-            <!--
-                <div class="card sombra">
-                    <div class= "contenedor1" id="perfil">
-                        <div class="col-12 my-13 pt-3 shadow">
-                            <hr>
-                            <div class="contenedor2">
-                                <div class="section-header">
-                                    <h2>Lista de Actividades</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
