--- a/packages/app/public/html/actividades.html
+++ b/packages/app/public/html/actividades.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../css/fontello.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <script src="../js/js.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <head>
     <header>
         <div class= "contenedor">
