--- a/packages/app/public/html/registroPsicologo.html
+++ b/packages/app/public/html/registroPsicologo.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/registroPsicologos.css">
     <script src="../js/js.js"></script>
     <script src="../js/regristroPsicologo.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <title>Registro Psicologos</title>
 </head>
 <header>
