agregar hora al formulario de evento y mod login

--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -28,7 +28,7 @@
     <input class="controls" type="text" name="palabras" id="palabras" placeholder="Ingrese la categoria">
     <input class="controls" type="text" name="nombreEvento" id="nombreEvento" placeholder="Ingrese el nombre del evento">
     <b>Ingrese la fecha del evento:</b>
-    <input class="controls" type="date" name="fecha" id="fecha">
+    <input class="controls" type="datetime-local" name="fecha" id="fecha">
     <input class="controls" type="text" name="direccion" id="direccion" placeholder="Ingrese la direccion del evento">
     <b>Ingrese una descripción del Evento:</b>
     <textarea name="textarea" id="descripcion" rows="3" cols="60"></textarea>
