Avance 1 aprobación de actividades

--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -113,6 +113,7 @@
                 </div>
                 <div class="search">
                     <label>
+                        <span class="title"><h2>Dashboard Psicologo</h2></span>
                     <!-- <input type="text" placeholder="search here">-->
                     </label>
                 </div>
@@ -122,99 +123,37 @@
                     </div>
                 </div>
             </dir>
-            <div class="cardbox">
-                <div class="card sombra">
-                    <div>
-                        <div class="numbers">6</div>
-                        <div class="cardName">Challenges completed</div>
-                    </div>
-                    <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trophy" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <line x1="8" y1="21" x2="16" y2="21" />
-                            <line x1="12" y1="17" x2="12" y2="21" />
-                            <line x1="7" y1="4" x2="17" y2="4" />
-                            <path d="M17 4v8a5 5 0 0 1 -10 0v-8" />
-                            <circle cx="5" cy="9" r="2" />
-                            <circle cx="19" cy="9" r="2" />
-                        </svg>
-                    </div>
-                </div>
-                <div class="card sombra">
-                    <div>
-                        <div class="numbers">9</div>
-                        <div class="cardName">challenges not completed</div>
-                    </div>
-                    <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alert-circle" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="12" cy="12" r="9" />
-                            <line x1="12" y1="8" x2="12" y2="12" />
-                            <line x1="12" y1="16" x2="12.01" y2="16" />
-                        </svg>
-                        </div>
-                </div>
-                <div class="card sombra">
-                    <div>
-                        <div class="numbers">1</div>
-                        <div class="cardName">I created event</div>
-                    </div>
-                    <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-square-plus" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <rect x="4" y="4" width="16" height="16" rx="2" />
-                            <line x1="9" y1="12" x2="15" y2="12" />
-                            <line x1="12" y1="9" x2="12" y2="15" />
-                        </svg>
-                    </div>
-                </div>
-            </div>
             <div class="details">
-                <div class="recentOrders sombra">
-                    <div class="cardHeader">
-                        <h2>Challenges</h2>
-                        <a href="#" class="btn">View all</a>
+                    <div class="recentOrders sombra">
+                        <div class="cardHeader">
+                            <h2>Actividades Pendientes</h2>
+                            <a href="#" class="btn">View all</a>
+                        </div>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td>Name</td>
+                                    <td>Place</td>
+                                    <td>Hour</td>
+                                    <td>Description</td>
+                                    <td>Por Aprobar</td>
+                                    <td>Delete</td>
+                                </tr>
+                            </thead>
+                            <tbody class="tbody">
+                                <!-- <tr>
+                                    <td>Paseo en bici</td>
+                                    <td>los heroes</td>
+                                    <td>11:00 pm</td>
+                                    <td><a href="#" class="btn status">go</a></td>
+                                    <td><a href="#" class="btn status">Aprobar</a></td>
+                                    <td><a href="#" class="btn-r status">why?</a></td>
+                                </tr> -->
+                            </tbody>
+                        </table>
                     </div>
-                    <table>
-                        <thead>
-                            <tr>
-                                <td>Name</td>
-                                <td>Place</td>
-                                <td>Hour</td>
-                                <td>Description</td>
-                                <td>Delete</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Paseo en bici</td>
-                                <td>los heroes</td>
-                                <td>11:00 pm</td>
-                                <td><a href="#" class="btn status">go</a></td>
-                                <td><a href="#" class="btn-r status">why?</a></td>
-                            </tr>
-                            <tr>
-                                <td>Paseo en bici</td>
-                                <td>los heroes</td>
-                                <td>11:00 pm</td>
-                                <td><a href="#" class="btn status">go</a></td>
-                                <td><a href="#" class="btn-r status">why?</a></td>
-                            </tr>
-                            <tr>
-                                <td>Paseo en bici</td>
-                                <td>los heroes</td>
-                                <td>11:00 pm</td>
-                                <td><a href="#" class="btn status">go</a></td>
-                                <td><a href="#" class="btn-r status">why?</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="recentCustomers sombra">
-                    <div class="cardHeader">
-                        <h2>Progress</h2>
-                    </div>
-                </div>
+            </div>
+            <div class="cardbox cards">
             </div>
         </div>
     </div>
