--- a/packages/app/public/html/perfilPsicologo.html
+++ b/packages/app/public/html/perfilPsicologo.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="search">
                     <label>
-                    <!-- <input type="text" placeholder="search here">-->
+                        <span class="title"><h2>Pérfil Psicologo</h2></span>
                     </label>
                 </div>
                 <div class="user">
