Arreglo js dashboard Psicologo

--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -159,6 +159,8 @@
     </div>
     <script src="../js/dashboard.js"></script>
     <script src="../js/perfilUser.js"></script>
+    <script src="../js/dashboardPsicologo.js"></script>
+    
 
 </body>
 </html>
