--- a/packages/app/public/html/perfilPsicologo.html
+++ b/packages/app/public/html/perfilPsicologo.html
@@ -16,7 +16,7 @@
             <ul>
                 <li>
                     <li>
-                        <a href="">
+                        <a href="EventosPsicologo.html">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <line x1="10" y1="14" x2="21" y2="3" />
@@ -113,7 +113,7 @@
                 </div>
                 <div class="search">
                     <label>
-                        <span class="title"><h2>Pérfil Psicologo</h2></span>
+                    <!-- <input type="text" placeholder="search here">-->
                     </label>
                 </div>
                 <div class="user">
