Actualizar botones de dashbboard psicologo

--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -122,7 +122,7 @@
                         <img src="../img/perfil.jpg" alt="">
                     </div>
                 </div>
-            </dir>
+            </div>
             <div class="details">
                     <div class="recentOrders sombra">
                         <div class="cardHeader">
@@ -160,7 +160,8 @@
     <script src="../js/dashboard.js"></script>
     <script src="../js/perfilUser.js"></script>
     <script src="../js/dashboardPsicologo.js"></script>
-    
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="../js/deleteActivity.js"></script>
 
 </body>
 </html>
