Se agrega funcionalidad a dashboard de psycology

--- a/packages/app/public/html/EventosPsicologo.html
+++ b/packages/app/public/html/EventosPsicologo.html
@@ -128,7 +128,7 @@
             -->
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">1</div>
+                        <div class="numbers challengeCreated">-</div>
                         <div class="cardName">I created event</div>
                     </div>
                     <div class="iconBox">
