--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -125,8 +125,8 @@
             <div class="cardbox">
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">6</div>
-                        <div class="cardName">Challenges completed</div>
+                        <div class="numbers challengeApprove">-</div>
+                        <div class="cardName">Events Approve</div>
                     </div>
                     <div class="iconBox">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trophy" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -142,21 +142,7 @@
                 </div>
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">9</div>
-                        <div class="cardName">challenges not completed</div>
-                    </div>
-                    <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alert-circle" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <circle cx="12" cy="12" r="9" />
-                            <line x1="12" y1="8" x2="12" y2="12" />
-                            <line x1="12" y1="16" x2="12.01" y2="16" />
-                        </svg>
-                        </div>
-                </div>
-                <div class="card sombra">
-                    <div>
-                        <div class="numbers">1</div>
+                        <div class="numbers challengeCreated">-</div>
                         <div class="cardName">I created event</div>
                     </div>
                     <div class="iconBox">
