--- a/packages/app/public/html/EventosParticipante.html
+++ b/packages/app/public/html/EventosParticipante.html
@@ -116,7 +116,7 @@
             <div class="cardbox">
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">6</div>
+                        <div class="numbers challengeCompleted">-</div>
                         <div class="cardName">Challenges completed</div>
                     </div>
                     <div class="iconBox">
@@ -133,7 +133,7 @@
                 </div>
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">9</div>
+                        <div class="numbers challengePending">-</div>
                         <div class="cardName">challenges not completed</div>
                     </div>
                     <div class="iconBox">
@@ -158,16 +158,3 @@
 </body>
 </html>
 
-
-            <!--
-                <div class="card sombra">
-                    <div class= "contenedor1" id="perfil">
-                        <div class="col-12 my-13 pt-3 shadow">
-                            <hr>
-                            <div class="contenedor2">
-                                <div class="section-header">
-                                    <h2>Lista de Actividades</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
