--- a/packages/app/public/html/dashParticipante.html
+++ b/packages/app/public/html/dashParticipante.html
@@ -78,7 +78,7 @@
             <div class="cardbox cards">
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">6</div>
+                        <div class="numbers challengeCompleted">-</div>
                         <div class="cardName">Challenges completed</div>
                     </div>
                     <div class="iconBox">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">9</div>
+                        <div class="numbers challengePending">-</div>
                         <div class="cardName">challenges not completed</div>
                     </div>
                     <div class="iconBox">
