base de datos con alertas

--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -190,7 +190,7 @@
                                 <td>Paseo en bici</td>
                                 <td>los heroes</td>
                                 <td>11:00 pm</td>
-                                <td><a onclick="aleta()" href="#" class="btn status">go</a></td>
+                                <td><a onclick="obtenerActividad(event)" href="#" class="btn status">go</a></td>
                                 <td><a href="#" class="btn-r status">why?</a></td>
                             </tr>
                             <tr>
