--- a/packages/app/public/html/modificarEvento.html
+++ b/packages/app/public/html/modificarEvento.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="../css/estiloCrearEvento.css">
   <script src="../js/js.js"></script>
+  <script src="../js/authenticate.js"></script>
   <title>Modificar Evento|Health Space</title>
 </head>
 <header>
