--- a/packages/app/public/html/perfilUser.html
+++ b/packages/app/public/html/perfilUser.html
@@ -10,6 +10,7 @@
 
 	    <script src="../jquery-3.2.1.min.js"></script>
 	    <script src="../alertifyjs/alertify.js"></script>
+        <script src="../js/authenticate.js"></script>
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
