--- a/packages/app/public/html/dashboard.html
+++ b/packages/app/public/html/dashboard.html
@@ -9,6 +9,7 @@
     integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/normallize.css">
     <link rel="stylesheet" type="text/css" href="../css/stylend.css">
+    <script src="../js/authenticate.js"></script>
 </head>
 <body>
     <div class="container">
