--- a/packages/app/public/html/dashParticipante.html
+++ b/packages/app/public/html/dashParticipante.html
@@ -144,7 +144,7 @@
 
                 <div class="recentCustomers sombra">
                     <div class="cardHeader">
-                        <h2>Progress</h2>
+                        <h2>Mi perfil</h2>
                     </div>
                     <div class="card">
                         <div class= "contenedor1" id="perfil">
