--- a/packages/app/public/html/PerfilParticipante.html
+++ b/packages/app/public/html/PerfilParticipante.html
@@ -115,7 +115,7 @@
             <div class="cardbox">
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">6</div>
+                        <div class="numbers challengeCompleted">-</div>
                         <div class="cardName">Challenges completed</div>
                     </div>
                     <div class="iconBox">
@@ -132,7 +132,7 @@
                 </div>
                 <div class="card sombra">
                     <div>
-                        <div class="numbers">9</div>
+                        <div class="numbers challengePending">-</div>
                         <div class="cardName">challenges not completed</div>
                     </div>
                     <div class="iconBox">
@@ -190,6 +190,6 @@
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/perfilPsicologo.js"></script>
+    <script src="../js/perfilUser.js"></script>
 </body>
 </html>
