--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="EventosPsicologo.html">
+                        <a href="/events">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <polyline points="5 12 3 12 12 3 21 12 19 12" />
@@ -103,7 +103,7 @@
             </ul>
         </div>
         <div class="main">
-            <dir class="topbar">
+            <div class="topbar">
                 <div class="toggle" onclick="toggleMenu()">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -122,7 +122,7 @@
                         <img src="../img/perfil.jpg" alt="">
                     </div>
                 </div>
-            </dir>
+            </div>
             <div class="cardbox">
                 <div class="card sombra">
                     <div>
