--- a/packages/app/public/html/perfilPsicologo.html
+++ b/packages/app/public/html/perfilPsicologo.html
@@ -17,7 +17,7 @@
             <ul>
                 <li>
                     <li>
-                        <a href="EventosPsicologo.html">
+                        <a href="/events">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <line x1="10" y1="14" x2="21" y2="3" />
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/events.html">
+                        <a href="/events">
                             <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <polyline points="5 12 3 12 12 3 21 12 19 12" />
@@ -132,6 +132,6 @@
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/perfilPsicologo.js"></script>
+    <script src="../js/perfilUser.js"></script>
 </body>
 </html>
